fix(style): summary page grid content alignment css edited

--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -2,7 +2,7 @@
   display: grid;
   align-items: center;
   justify-items: center;
-  align-content: stretch;
+  align-content: space-around;
   height: 100%;
   width: 100%;
 
